maze.lessons.maze.island.IslandMaze.scala.error
Escaper:9: error: illegal start of simple expression
    while ()  
           ^Escaper:10: error: ')' expected but '}' found.
}
^